[metadata]
name = py3_sg
version = 0.16
url = https://github.com/tvladyslav/py3_sg
author = Dan Lenski
author_email = dlenski@gmail.com
maintainer = Vladyslav Tsilytskyi
maintainer_email = ykp@protonmail.ch
license = GPLv3+
license_files = LICENSE.md
description = Python SCSI generic library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SCSI
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Hardware

[bdist_wheel]
universal = False
